--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>My message to Reform supporters</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning Objective Observation</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Mindset Shift in Trading</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Tip.11 When u make a hole on a pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>The Legendary Buffalo Chicken Pinwheel - Krispy Pizza!</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Sleeping Giant Within</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -849,7 +849,7 @@
                     <div class="video-info">
                         <h3>Healing Emotional Triggers & the Pain Body | Eckhart Tolle on Freedom From Conditioning (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1388,7 +1388,7 @@
                     <div class="video-info">
                         <h3>How to End Drama and Emotional Chaos | Eckhart Tolle on Why We Resist Letting Go (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2142,7 +2142,7 @@
                     <div class="video-info">
                         <h3>The Men Who Explained the Universe | Thales, Anaximander & Anaximenes</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2153,7 +2153,7 @@
                     <div class="video-info">
                         <h3>AI will drive mass unemployment and inequality</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>My message to Reform supporters</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Mindset Shift in Trading</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5195,7 +5195,7 @@
                         <div class="video-info">
                             <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5949,7 +5949,7 @@
                         <div class="video-info">
                             <h3>AI will drive mass unemployment and inequality</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning Objective Observation</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7363,7 +7363,7 @@
                         <div class="video-info">
                             <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7418,7 +7418,7 @@
                         <div class="video-info">
                             <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7528,7 +7528,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Sleeping Giant Within</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7539,7 +7539,7 @@
                         <div class="video-info">
                             <h3>Healing Emotional Triggers & the Pain Body | Eckhart Tolle on Freedom From Conditioning (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7748,7 +7748,7 @@
                         <div class="video-info">
                             <h3>How to End Drama and Emotional Chaos | Eckhart Tolle on Why We Resist Letting Go (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7792,7 +7792,7 @@
                         <div class="video-info">
                             <h3>The Men Who Explained the Universe | Thales, Anaximander & Anaximenes</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Tip.11 When u make a hole on a pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8772,7 +8772,7 @@
                         <div class="video-info">
                             <h3>The Legendary Buffalo Chicken Pinwheel - Krispy Pizza!</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
