--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>This simple Investment Strategy Beats the Market</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">15 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>Do More Without Stressing Out | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -585,7 +585,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2263,7 +2263,7 @@
                     <div class="video-info">
                         <h3>Mistakes are better than ego | Buddhism In English</h3>
                         <div class="channel">Buddhism</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 28, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>This simple Investment Strategy Beats the Market</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">15 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5250,7 +5250,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7363,7 +7363,7 @@
                         <div class="video-info">
                             <h3>Do More Without Stressing Out | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7803,7 +7803,7 @@
                         <div class="video-info">
                             <h3>Mistakes are better than ego | Buddhism In English</h3>
                             <div class="channel">Buddhism</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 28, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
