--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
                     <div class="video-info">
                         <h3>Navratri Special: How Devi gave Ramanujan black hole Maths | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">38 minutes ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=3Znue1qzmo8" target="_blank">
-                    <img src="https://i.ytimg.com/vi/3Znue1qzmo8/mqdefault.jpg" alt="How to Make Canotto Style Pizza">
+                    <img src="https://i.ytimg.com/vi/3Znue1qzmo8/mqdefault.jpg" alt="How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza">
                     <div class="video-info">
-                        <h3>How to Make Canotto Style Pizza</h3>
+                        <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Liberate Your Mind | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Stubborn trading! The cost of ignoring the market...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Stubborn trading! The cost of ignoring the market...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Navratri Special: How Devi gave Ramanujan black hole Maths | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">38 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Liberate Your Mind | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,11 +8735,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=3Znue1qzmo8" target="_blank">
-                        <img src="https://i.ytimg.com/vi/3Znue1qzmo8/mqdefault.jpg" alt="How to Make Canotto Style Pizza">
+                        <img src="https://i.ytimg.com/vi/3Znue1qzmo8/mqdefault.jpg" alt="How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza">
                         <div class="video-info">
-                            <h3>How to Make Canotto Style Pizza</h3>
+                            <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8772,7 +8772,7 @@
                         <div class="video-info">
                             <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
